# DLProj

./: Battery_RUL_Cleaned.csv  CS2_35_Cleaned_Features.csv  CS2_36_Cleaned_Features.csv  CS2_37_Cleaned_Features.csv  CS2_38_Cleaned_Features.csv  HNEI_STANDARD_SCALED.csv  HNEI_TFT_SCALED.csv  HNEI_XGB_SCALED.csv  Is_NASA_false.csv  Is_NASA_true.csv  NASA_STANDARD_SCALED.csv  NASA_TFT_SCALED.csv  NASA_XGB_SCALED.csv  README.md  VAE_traj.py  app.py  best_demo_battery.csv  best_demo_battery_features.csv  checkpoint_baseline_NASA.pt  checkpoint_cnn_baseline_HNEI.pt  checkpoint_cnn_rul.pt  checkpoint_transfer_NASA.pt  checkpoint_vae_NASA.pt  ckpt_fewshot_baseline.pt  ckpt_fewshot_transfer.pt  ckpt_fewshot_vae.pt  ckpt_nasa_fewshot_baseline.pt  ckpt_nasa_fewshot_transfer.pt  ckpt_nasa_fewshot_vae.pt  cleaning_data.py  cnn_cross_domain_baseline.py  cnn_cs2.py  cnn_few_shot_comparison.py  cnn_new_battery.py  cnn_rul.py  cnn_vae_transfer.py  combined_scaled_battery_data.csv  compare_tft_windows.py  data_aug.ipynb  demo_batteries.npz  (+42 more)
.claude/: settings.json
.matplotlib_cache/: fontlist-v330.json
checkpoints/: checkpoint_baseline.pt  checkpoint_transfer.pt  checkpoint_vae.pt  checkpoint_xgboost_cross.joblib  checkpoint_xgboost_cross_standard.joblib  ckpt_fewshot_baseline.pt  ckpt_fewshot_transfer.pt  tft_nasa_weight_2p0_checkpoint.pt  xgboost_baseline_best.joblib
demo_csvs/: HNEI_DATA_AUG_RAW.csv  HNEI_STANDARD_SCALED_NO_IS_NASA.csv  NASA_DATA_AUG_RAW.csv  NASA_STANDARD_SCALED_NO_IS_NASA.csv
demo_snapshots/: README.md
model_checkpoints/: demo_tft_transformer_metrics.json  (+16 more)
(+196 files in other folders)
